# qt-property-widgets

./: LICENSE  MANIFEST.in  README.md  mkdocs.yml  mypy.ini  pyproject.toml
docs/: modules.md
src/qt_property_widgets/: __init__.py  color_dialog.py  expander.py  utilities.py  widgets.py
tests/: __init__.py
