[project]
name = "qt_property_widgets"
description = ""
authors = [{ name = "Dominic Canare", email = "dom@dominiccanare.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <4.0"
keywords = []
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyside6>=6.9.0",
]

[project.urls]
Homepage = "https://domstoppable.github.io/qt-property-widgets"
Documentation = "https://domstoppable.github.io/qt-property-widgets"
Repository = "https://github.com/domstoppable/qt-property-widgets"
Issues = "https://github.com/domstoppable/qt-property-widgets/issues"


[tool.uv]
dev-dependencies = [
    "pytest>=8.2",
    "pre-commit>=2.20.0",
    "mypy>=0.991",
    "deptry>=0.20.0",
    "tox-uv>=1.11.3",
    "pytest-cov>=4.0.0",

    # stubs
    # "opencv-stubs",
    # "types-protobuf",
    # "pandas-stubs",

    # docs
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mike",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_format = '%(asctime)s %(levelname)7s %(name)-60s | %(message)-100s "%(pathname)s:%(lineno)s"'

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_property_widgets"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["qt_property_widgets*"]

[tool.setuptools.package-data]
"qt_property_widgets" = ["assets/**"]

